--- a/OnSale.Web/Views/Shared/_Layout.cshtml
+++ b/OnSale.Web/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Countries" asp-action="Index">Страны</a>
+                        </li> 
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Категории</a>
                         </li>
                     </ul>
                 </div>
