--- a/OnSale.Web/Views/Categories/Index.cshtml
+++ b/OnSale.Web/Views/Categories/Index.cshtml
@@ -18,7 +18,7 @@
                 <h3 class="panel-title">Categories</h3>
             </div>
             <div class="panel-body">
-                <table class="table table-hover table-responsive table-striped" id="MyTable">
+                <table class="table table-hover table-responsive-md table-striped" id="MyTable">
                     <thead>
                         <tr>
                             <th>
