--- a/OnSale.Web/Views/Countries/DetailsDepartment.cshtml
+++ b/OnSale.Web/Views/Countries/DetailsDepartment.cshtml
@@ -39,7 +39,7 @@
                 <h3 class="panel-title">Cities</h3>
             </div>
             <div class="panel-body">
-                <table class="table table-hover table-responsive table-striped" id="MyTable">
+                <table class="table table-hover table-responsive-md table-striped" id="MyTable">
                     <thead>
                         <tr>
                             <th>
