--- a/OnSale.Web/Views/Shared/_Layout.cshtml
+++ b/OnSale.Web/Views/Shared/_Layout.cshtml
@@ -27,10 +27,11 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Countries" asp-action="Index">Страны</a>
-                        </li> 
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Категории</a>
                         </li>
+                        <li><a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Продукты</a></li>
                     </ul>
                 </div>
             </div>
