--- a/OnSale.Web/Views/Products/_Product.cshtml
+++ b/OnSale.Web/Views/Products/_Product.cshtml
@@ -20,7 +20,7 @@
 
 <div class="form-group">
     <label asp-for="Price" class="control-label"></label>
-    <input asp-for="Price" class="form-control" />
+    <input asp-for="Price" asp-for-invariant="numberProp"  class="form-control" />
     <span asp-validation-for="Price" class="text-danger"></span>
 </div>
 
