--- a/OnSale.Web/Views/Products/_Product.cshtml
+++ b/OnSale.Web/Views/Products/_Product.cshtml
@@ -19,9 +19,9 @@
 </div>
 
 <div class="form-group">
-    <label asp-for="Price" class="control-label"></label>
-    <input asp-for="Price" asp-for-invariant="numberProp"  class="form-control" />
-    <span asp-validation-for="Price" class="text-danger"></span>
+    <label asp-for="PriceString" class="control-label"></label>
+    <input asp-for="PriceString" asp-for-invariant="numberProp"  class="form-control" />
+    <span asp-validation-for="PriceString" class="text-danger"></span>
 </div>
 
 <div class="form-group">
