--- a/OnSale.Web/Views/Account/Login.cshtml
+++ b/OnSale.Web/Views/Account/Login.cshtml
@@ -34,6 +34,7 @@
             <div class="form-group">
                 <input type="submit" value="Логин" class="btn btn-success" />
                 <a asp-action="Register" class="btn btn-primary">Регистрация</a>
+                <a asp-action="RecoverPassword" class="btn btn-link">Забыли Ваш пароль?</a>
             </div>
         </form>
     </div>
