--- a/OnSale.Prism/OnSale.Prism/Views/OnSaleMasterDetailPage.xaml
+++ b/OnSale.Prism/OnSale.Prism/Views/OnSaleMasterDetailPage.xaml
@@ -4,6 +4,8 @@
                   xmlns:prism="http://prismlibrary.com"
                   prism:ViewModelLocator.AutowireViewModel="True"
                   x:Class="OnSale.Prism.Views.OnSaleMasterDetailPage"
+                  xmlns:fftransformations="clr-namespace:FFImageLoading.Transformations;assembly=FFImageLoading.Transformations"
+                  xmlns:forms="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
                   Background="{StaticResource ColorBackground}"
                   >
 
@@ -17,8 +19,27 @@
             </ContentPage.Padding>
 
             <StackLayout Padding="20">
-                <Image HeightRequest="150"
-                       Source="onsale"/>
+                <StackLayout Orientation="Horizontal">
+                    <Image HeightRequest="80"
+                           Source="onsale"/>
+                    <forms:CachedImage Aspect="AspectFill"
+                                                Source="{Binding User.ImageFullPath}" 
+                                                CacheDuration= "50"
+                                                HeightRequest="100"
+                                                Margin="5"
+                                                RetryCount= "3"
+                                                RetryDelay= "600"
+                                                WidthRequest="100">
+                        <forms:CachedImage.Transformations>
+                            <fftransformations:CircleTransformation />
+                        </forms:CachedImage.Transformations>
+                    </forms:CachedImage>
+                </StackLayout>
+                <!--<Image HeightRequest="150"
+                       Source="onsale"/>-->
+                <Label FontAttributes="Bold"
+                       FontSize="Large"
+                       Text="{Binding User.FullName}"/>
                 <ListView BackgroundColor="Transparent"
                 	      ItemsSource="{Binding Menus}"
                 	      HasUnevenRows="True"
