--- a/OnSale.Web/Views/Shared/_Layout.cshtml
+++ b/OnSale.Web/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Категории</a>
                             </li>
                             <li><a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Продукты</a></li>
+                            <li><a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Index">Пользователи</a></li>
                         }
                        
                     </ul>
