--- a/OnSale.Web/Views/Products/Index.cshtml
+++ b/OnSale.Web/Views/Products/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<OnSale.Common.Enitities.Product>
+﻿@model IEnumerable<OnSale.Web.Data.Entities.Product>
 
 @{
     ViewData["Title"] = "Index";
